# tsk

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: codeql.yml
cli/: Cargo.toml  cargo.toml
cli/src/: agent-context.md  main.rs
cli/src/tui/: mod.rs  tasks_pane.rs  threads_pane.rs
cli/tests/: e2e.rs
core/: Cargo.toml
core/src/: lib.rs
daemon/: Cargo.toml
daemon/src/: main.rs
doc/adr/: 0001-record-architecture-decisions.md  0002-client-daemon-cqrs-architecture.md  0003-json-rpc-ipc-protocol.md  0004-unified-tsk-binary.md  0005-tui-state-refresh-via-file-watch.md  0006-tui-state-refresh-via-daemon-polling.md  decisions.md
doc/arch/: 2026-03-08T07-49-54Z-ipc-architecture.v3.md  2026-03-10-domain-model.md
doc/planning/: delta-1-plan.md  plan.md  task-pane-feature.md
doc/session-log/: 2026-03-09.md  2026-03-10.md  index.md
