[workspace]
members = ["core", "cli", "daemon"]
resolver = "2"

[workspace.package]
version = "0.1.5"
homepage = "https://github.com/jimbarritt/tsk"
repository = "https://github.com/jimbarritt/tsk"
license = "MIT"
keywords = ["task", "project", "flow", "agent", "mcp"]
categories = ["command-line-utilities", "development-tools"]
edition = "2021"

[workspace.dependencies]
tsk-core = { path = "core", version = "0.1.5" }
