[package]
name = "tsk-bin"
version = "0.1.2"
edition = "2021"
description = "tsk — work with a clear context"
homepage = "https://github.com/jimbarritt/tsk"
repository = "https://github.com/jimbarritt/tsk"
license = "MIT"
keywords = ["task", "project", "flow", "agent", "mcp"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "tsk"
path = "src/main.rs"

[dependencies]
tsk-core = { version = "0.1.0",  path = "../core" }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"
notify = { version = "6", default-features = false, features = ["macos_kqueue"] }
