[package]
name = "tsk-bin"
version.workspace = true
edition.workspace = true
description = "tsk — work with a clear context"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "tsk"
path = "src/main.rs"

[dependencies]
tsk-core = { workspace = true }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"
