[package]
name = "tsk-core"
version = "0.1.2"
edition = "2021"
description = "tsk-core - core libs shared with cli and tskd"
homepage = "https://github.com/jimbarritt/tsk"
repository = "https://github.com/jimbarritt/tsk"
license = "MIT"
keywords = ["task", "project", "flow", "agent", "mcp"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
