[package]
name = "tsk-core"
version.workspace = true
edition.workspace = true
description = "tsk-core - core libs shared with cli and tskd"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
