[package]
name = "tskd"
version = "0.1.2"
edition = "2021"
description = "tskd - daemon for tsk processing"
homepage = "https://github.com/jimbarritt/tsk"
repository = "https://github.com/jimbarritt/tsk"
license = "MIT"
keywords = ["task", "project", "flow", "agent", "mcp"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "tskd"
path = "src/main.rs"

[dependencies]
tsk-core = { version = "0.1.0", path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
