[package]
name = "tskd"
version.workspace = true
edition.workspace = true
description = "tskd - daemon for tsk processing"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "tskd"
path = "src/main.rs"

[dependencies]
tsk-core = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
